--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(EngineCore)
 include(FetchContent)
 
 set(CMAKE_CXX_STANDARD 20)
+#add_compile_options(-v)
 
 file(GLOB_RECURSE CPP_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}
         "Application/*.cpp"
@@ -12,6 +13,7 @@ include_directories(
         ${CMAKE_SOURCE_DIR}/Core/Util/Public
         ${CMAKE_SOURCE_DIR}/Core/Net/Public
 )
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 
 # OpenSSL
 IF(WIN32)
@@ -43,15 +45,44 @@ FetchContent_Declare(
         GIT_TAG release-1.12.1
 )
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(libevent spdlog googletest)
 
+FetchContent_MakeAvailable(libevent spdlog googletest)
 include_directories(${libevent_SOURCE_DIR}/include/)
 include_directories(${libevent_BINARY_DIR}/include/)
-
 include_directories(${spdlog_SOURCE_DIR}/include/)
 
 
+# LLVM
+SET(LLVM_DIR /usr/local/Cellar/llvm/13.0.0_1/lib/cmake/llvm)
+find_package(LLVM REQUIRED CONFIG)
+list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
+include(AddLLVM)
+
+# Clang
+SET(Clang_DIR /usr/local/Cellar/llvm/13.0.0_1/lib/cmake/clang)
+find_package(Clang REQUIRED)
+
+message("LLVM STATUS:
+  Definitions ${LLVM_DEFINITIONS}
+  Includes    ${LLVM_INCLUDE_DIRS}
+              ${CLANG_INCLUDE_DIRS}
+  Libraries   ${LLVM_LIBRARY_DIRS}"
+)
+
+# 添加 LLVM 和 Clang 的头文件和链接库
+include_directories(SYSTEM ${LLVM_INCLUDE_DIRS} ${CLANG_INCLUDE_DIRS})
+link_directories(${LLVM_LIBRARY_DIRS})
+add_definitions(${LLVM_DEFINITIONS})
+llvm_map_components_to_libnames(llvm_libs support)
+list(APPEND clang_libs clangBasic clangAST clangFrontend clangLex)
+
+# Compiler Plugin
+add_subdirectory(CompilerPlugin)
+
+# 主程序
 add_executable(EngineCore ${CPP_SOURCES})
+add_dependencies(EngineCore TestPlugin)
+target_compile_options(EngineCore PRIVATE -fplugin=${PROJECT_BINARY_DIR}/lib/libTestPlugin.dylib)
 
 # Unit Test
 file(GLOB_RECURSE CPP_TEST_SOURCES RELATIVE ${CMAKE_SOURCE_DIR}
