--- a/CompilerExtensions/CMakeLists.txt
+++ b/CompilerExtensions/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_executable(EHT EngineHeaderTool.cpp)
-target_link_libraries(EHT Util ${LLVM_LIBRARY_DIRS}/libclang.dylib)
+add_executable(EHT EngineHeaderTool.cpp Parser.cpp tools.cpp)
+target_link_libraries(EHT Util xml2 ${LLVM_LIBRARY_DIRS}/libclang.dylib)
